fix: Update code blocks action button's alignment

--- a/css/source/css/styles.css
+++ b/css/source/css/styles.css
@@ -703,7 +703,7 @@ ul.file-headers {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 5px; }
+    margin-bottom: 3px; }
     .codeblock-actions-group .actions-right .action {
       display: flex;
       justify-content: center;
